update components