@@ -6,6 +6,7 @@ import mysh.codegen.CodeUtil;
 import mysh.codegen.DynamicSql;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.math.BigDecimal;
 import java.text.DateFormat;
@@ -30,12 +31,12 @@ import java.util.concurrent.TimeUnit;
  */
 public class SqlHelper extends DynamicSql<SqlHelper> {
 	private NamedParamQuery jdbc;
-
+	
 	private int pageNo;
 	private int pageSize;
 	private List<ResultHandler> resultHandlers;
 	private CacheLevel cacheLevel;
-
+	
 	/**
 	 * 拼接外部条件.
 	 *
@@ -66,7 +67,7 @@ public class SqlHelper extends DynamicSql<SqlHelper> {
 		}
 		return this;
 	}
-
+	
 	/**
 	 * 拼接外部参数.
 	 *
@@ -83,40 +84,40 @@ public class SqlHelper extends DynamicSql<SqlHelper> {
 		}
 		return this;
 	}
-
+	
 	/**
 	 * 分页信息。
 	 */
 	public SqlHelper page(int pageNo, int pageSize) {
 		if (pageNo < 1 || pageSize < 1)
 			throw new IllegalArgumentException("page info should be positive");
-
+		
 		this.pageNo = pageNo;
 		this.pageSize = pageSize;
 		return this;
 	}
-
+	
 	private final ConcurrentHashMap<Class<?>, Map<String, Field>> classFields = new ConcurrentHashMap<>();
-
+	
 	private static final EnumSet<KeyStrategy> upperCaseKey = EnumSet.of(KeyStrategy.UPPER_CASE);
-
+	
 	/**
 	 * 取数据，返回给定类型的 list.
 	 */
 	public <M> List<M> fetch(Class<M> type) throws Exception {
 		List<Map<String, Object>> results = fetch(upperCaseKey);
 		if (results == null) return Collections.emptyList();
-
+		
 		Map<String, Field> modelFields = getTypeFields(type);
 		List<M> rs = new ArrayList<>(results.size());
 		for (Map<String, Object> result : results) {
-			M model = type.newInstance();
+			M model = type.getConstructor().newInstance();
 			assembleResult(result, model, modelFields);
 			rs.add(model);
 		}
 		return rs;
 	}
-
+	
 	/**
 	 * assemble result(row set) to given instance.
 	 *
@@ -125,15 +126,16 @@ public class SqlHelper extends DynamicSql<SqlHelper> {
 	 * @param modelFields include fields defined in recurring super classes,
 	 *                    which can be primitive type or complex type.
 	 */
-	private void assembleResult(Map<String, Object> result, Object model,
-	                            Map<String, Field> modelFields) throws IllegalAccessException, InstantiationException {
+	private void assembleResult(
+			Map<String, Object> result, Object model, Map<String, Field> modelFields)
+			throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
 		// iterate fields but not results to make sure all complex-type fields be assembled
 		for (Map.Entry<String, Field> fe : modelFields.entrySet()) {
 			Field field = fe.getValue();
 			if ((field.getModifiers() & Modifier.FINAL) > 0
-					|| (field.getModifiers() & Modifier.STATIC) > 0
+					    || (field.getModifiers() & Modifier.STATIC) > 0
 			) continue;
-
+			
 			Class<?> fieldType = field.getType();
 			if (isBasicType(fieldType)) {
 				Object value = result.get(fe.getKey());
@@ -141,23 +143,23 @@ public class SqlHelper extends DynamicSql<SqlHelper> {
 					setFieldWithProperType(model, field, value);
 			} else {
 				Map<String, Field> fieldFields = getTypeFields(fieldType);
-				Object fieldInst = fieldType.newInstance();
+				Object fieldInst = fieldType.getConstructor().newInstance();
 				assembleResult(result, fieldInst, fieldFields);
 				field.set(model, fieldInst);
 			}
 		}
 	}
-
+	
 	/**
 	 * basic type from jdbc result set, such as BigDecimal,Long,String etc.
 	 */
 	private boolean isBasicType(Class<?> type) {
 		return Number.class.isAssignableFrom(type)
-				|| String.class.isAssignableFrom(type)
-				|| Date.class.isAssignableFrom(type)
-				|| type.isPrimitive();
+				       || String.class.isAssignableFrom(type)
+				       || Date.class.isAssignableFrom(type)
+				       || type.isPrimitive();
 	}
-
+	
 	private void setFieldWithProperType(Object model, Field field, Object value) throws IllegalAccessException {
 		Class<?> ft = field.getType();
 		Class<?> vt = value.getClass();
@@ -179,7 +181,7 @@ public class SqlHelper extends DynamicSql<SqlHelper> {
 		}
 		field.set(model, value);
 	}
-
+	
 	/**
 	 * get fields defined by type (and recurred super classes).
 	 * fields with same name in super classes will be covered  by sub class.
@@ -193,7 +195,7 @@ public class SqlHelper extends DynamicSql<SqlHelper> {
 				types.push(t);
 				t = t.getSuperclass();
 			}
-
+			
 			fields = new HashMap<>();
 			while (!types.isEmpty()) {
 				t = types.pop();
@@ -207,9 +209,9 @@ public class SqlHelper extends DynamicSql<SqlHelper> {
 		}
 		return fields;
 	}
-
+	
 	private static final Map<CacheLevel, Cache<CacheKey, List<Map<String, Object>>>> caches = new HashMap<>();
-
+	
 	static {
 		// 初始化缓存
 		for (CacheLevel cl : CacheLevel.values()) {
@@ -221,30 +223,30 @@ public class SqlHelper extends DynamicSql<SqlHelper> {
 			);
 		}
 	}
-
+	
 	private class CacheKey {
 		private String sql;
 		private Map<String, Object> param;
 		private EnumSet<KeyStrategy> ks;
-
+		
 		CacheKey(String sql, Map<String, Object> param, EnumSet<KeyStrategy> ks) {
 			this.sql = sql;
 			this.param = param;
 			this.ks = ks;
 		}
-
+		
 		@Override
 		public boolean equals(Object o) {
 			if (this == o) return true;
 			if (o == null || getClass() != o.getClass()) return false;
-
+			
 			CacheKey cacheKey = (CacheKey) o;
-
+			
 			if (!sql.equals(cacheKey.sql)) return false;
 			if (!param.equals(cacheKey.param)) return false;
 			return ks != null ? ks.equals(cacheKey.ks) : cacheKey.ks == null;
 		}
-
+		
 		@Override
 		public int hashCode() {
 			int result = sql.hashCode();
@@ -253,7 +255,7 @@ public class SqlHelper extends DynamicSql<SqlHelper> {
 			return result;
 		}
 	}
-
+	
 	/**
 	 * 取数据为 map 时 key 策略.
 	 */
@@ -267,14 +269,14 @@ public class SqlHelper extends DynamicSql<SqlHelper> {
 		 */
 		CAMEL
 	}
-
+	
 	/**
 	 * fetch <code>list&lt;map&gt;</code>
 	 */
 	public List<Map<String, Object>> fetch() throws Exception {
 		return fetch((EnumSet<KeyStrategy>) null);
 	}
-
+	
 	/**
 	 * fetch <code>list&lt;map&gt;</code>.
 	 *
@@ -285,36 +287,36 @@ public class SqlHelper extends DynamicSql<SqlHelper> {
 		if (pageNo > 0)
 			sql = genSql(sql, pageNo, pageSize);
 		final Map<String, Object> param = getParamMap();
-
+		
 		List<Map<String, Object>> result;
 		if (this.cacheLevel != null) {
 			final String finalSql = sql;
 			result = caches.get(this.cacheLevel)
-					.get(new CacheKey(sql, param, ks), ck -> {
-						List<Map<String, Object>> r = jdbc.queryForList(finalSql, param);
-						r = SqlHelper.this.handleResult(r, ks);
-						return r;
-					});
+					         .get(new CacheKey(sql, param, ks), ck -> {
+						         List<Map<String, Object>> r = jdbc.queryForList(finalSql, param);
+						         r = SqlHelper.this.handleResult(r, ks);
+						         return r;
+					         });
 		} else {
 			result = jdbc.queryForList(sql, param);
 			result = handleResult(result, ks);
 		}
 		return result;
 	}
-
+	
 	private String genSql(String sql, int pageNo, int pageSize) {
 		if (DbUtil.isOracle()) {
 			int noFirst = (pageNo - 1) * pageSize;
 			int noLast = pageNo * pageSize;
-
+			
 			return "SELECT * FROM (SELECT ROWNUM R_, S_.* FROM ("
-					+ sql + " ) S_ WHERE ROWNUM <= " + noLast + " ) WHERE R_ > " + noFirst;
+					       + sql + " ) S_ WHERE ROWNUM <= " + noLast + " ) WHERE R_ > " + noFirst;
 		} else {
 			int noFirst = (pageNo - 1) * pageSize;
 			return sql + " limit " + noFirst + "," + pageSize;
 		}
 	}
-
+	
 	/**
 	 * 结果处理器, 可调用多次添加多个结果处理器, 处理结果时按 handler 添加顺序依次调用.
 	 */
@@ -324,14 +326,14 @@ public class SqlHelper extends DynamicSql<SqlHelper> {
 		this.resultHandlers.add(rh);
 		return this;
 	}
-
+	
 	/**
 	 * 将返回结果中的时间数据转成字符串。
 	 * yyyy-MM-dd HH:mm:ss
 	 */
 	public static final ResultHandler dateValue2Str = new ResultHandler() {
 		private final DateFormat dfFull = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
-
+		
 		@Override
 		public void handle(Map<String, Object> map) {
 			for (Map.Entry<String, Object> entry : map.entrySet()) {
@@ -340,20 +342,20 @@ public class SqlHelper extends DynamicSql<SqlHelper> {
 			}
 		}
 	};
-
+	
 	/**
 	 * 缓存级别
 	 */
 	public enum CacheLevel {
 		M1(60), M5(60 * 5), M15(60 * 15), M30(60 * 30), H1(60 * 60), D1(60 * 60 * 24);
-
+		
 		int seconds;
-
+		
 		CacheLevel(int seconds) {
 			this.seconds = seconds;
 		}
 	}
-
+	
 	/**
 	 * 结果缓存时间级别
 	 */
@@ -361,7 +363,7 @@ public class SqlHelper extends DynamicSql<SqlHelper> {
 		this.cacheLevel = cacheLevel;
 		return this;
 	}
-
+	
 	private List<Map<String, Object>> handleResult(List<Map<String, Object>> result, EnumSet<KeyStrategy> ks) {
 		if (result != null) {
 			if (ks != null && (ks.contains(KeyStrategy.UPPER_CASE) || ks.contains(KeyStrategy.CAMEL))) {
@@ -378,7 +380,7 @@ public class SqlHelper extends DynamicSql<SqlHelper> {
 				}
 				result = newR;
 			}
-
+			
 			if (this.resultHandlers != null)
 				for (Map<String, Object> map : result) {
 					for (ResultHandler handler : this.resultHandlers) {
@@ -388,16 +390,16 @@ public class SqlHelper extends DynamicSql<SqlHelper> {
 		}
 		return result;
 	}
-
+	
 	// ========== create below =============
 	public static SqlHelper create(NamedParamQuery jdbc, String querySql) {
 		return new SqlHelper(jdbc,
 				new StringBuilder(Objects.requireNonNull(querySql, "query sql can't be null")), null);
 	}
-
+	
 	public SqlHelper(NamedParamQuery jdbc, StringBuilder cond, Map<String, Object> paramMap) {
 		super(cond, paramMap);
 		this.jdbc = Objects.requireNonNull(jdbc, "jdbc template can't be null");
 	}
-
+	
 }
